tgui/packages/tgui/styles/themes/ntos_rusty.scss
/**
 * Copyright (c) 2020 Aleksej Komarov
 * SPDX-License-Identifier: MIT
 */

.theme-ntos_rusty:root {
  --color-base: hsl(110, 82.7%, 5%);
  --color-primary: hsl(110, 82.7%, 38.4%);
  --color-label: hsl(41, 81%, 52.5%);
  --color-good: hsl(109.9, 72.8%, 44.7%);
  --color-bad: hsl(0, 73%, 43.5%);

  --background-color: hsl(106.7, 20%, 8.8%);
  --base-gradient-spread: 0%;

  --notice-box-background: hsl(113, 74.7%, 29.4%);

  --button-background-default: hsla(112.5, 100%, 54.9%, 0.25);
  --button-background-disabled: hsl(112.5, 17.8%, 35.3%);
  --button-background-selected: rgba(69, 232, 36, 0.25);

  --progress-bar-background: rgba(0, 0, 0, 0.5);
  --progress-bar-fill: rgba(69, 232, 36, 0.65);

  --titlebar-background: rgba(52, 232, 36, 0.25);

  .Layout__content {
    background-image: repeating-linear-gradient(
      0deg,
      rgba(black, 0.15),
      rgba(black, 0.15) 1px,
      transparent 2.5px,
      transparent 5px
    );
    background-size: 100%, 100%;
    background-position: center, center;
  }
  .Button {
    color: hsl(110.1, 100%, 54.9%);
  }
  .Button:hover,
  .Button:focus {
    color: hsl(110.1, 100%, 54.9%);
    background-color: hsla(112.5, 100%, 54.9%, 0.369);
    transition: 0.1s;
  }
  .Button--selected {
    color: hsl(110.1, 100%, 54.9%);
  }
  body {
    color: white;
    font: 1.3rem;
  }
  .Section {
    border-radius: 0.16em;
  }
  .Section__title {
    border-bottom: var(--border-thickness-small) solid vars(--color-primary);
  }
  .Section__titleText {
    color: hsl(110.1, 100%, 54.9%);
  }
  .Tab {
    color: hsl(110.1, 100%, 54.9%);
  }
  .Tab--selected {
    color: hsl(110.1, 100%, 54.9%);
    border: 2px solid hsl(110.1, 100%, 54.9%);
    background-color: rgba(69, 232, 36, 0.25);
  }
  ::selection {
    background: hsl(209.9, 100%, 50%);
  }
  .NoticeBox {
    border-radius: 0.16em;
  }
}

